rename groups -> blocks (part 1)